Add some buttons

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -31,9 +31,6 @@
     font-weight: 500;
     line-height: 26.4px;
   }
-  button {
-    text-align: center;
-  }
   div {
     border: 1px solid black;
     padding: 10px;
@@ -41,3 +38,35 @@
     height: 200px;
     text-align: justify;
   }
+  button {
+   border-top: 1px solid #ffffff;
+   background: #ffffff;
+   background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#ffffff));
+   background: -webkit-linear-gradient(top, #ffffff, #ffffff);
+   background: -moz-linear-gradient(top, #ffffff, #ffffff);
+   background: -ms-linear-gradient(top, #ffffff, #ffffff);
+   background: -o-linear-gradient(top, #ffffff, #ffffff);
+   padding: 6px 12px;
+   -webkit-border-radius: 5px;
+   -moz-border-radius: 5px;
+   border-radius: 5px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: #000000;
+   font-size: 14px;
+   font-family: Georgia, serif;
+   text-decoration: none;
+   text-align: center;
+   vertical-align: middle;
+   }
+button:hover {
+   border-top-color: #9fa3a6;
+   background: #9fa3a6;
+   color: #000000;
+   }
+button:active {
+   border-top-color: #1b435e;
+   background: #1b435e;
+   }
